# av7

./: CMakeLists.txt  Makefile
src/: main.cpp
src/consts/: gameconsts.h  graphconsts.h
src/core/: checkcrossing.cpp  checkcrossing.h  checkfires.cpp  checkfires.h  checking.cpp  checking.h  core.cpp  core.h  rand.cpp  rand.h
src/loging/: loging.cpp  loging.h
src/types/: alien.cpp  alien.h  alienabc.cpp  alienabc.h  alienfleetonestorage.cpp  alienlazer.cpp  alienlazer.h  alienlazersstorage.cpp  aliens.cpp  aliens.h  alienstorage.cpp  alienstorage.h  animatedpack.cpp  animatedpack.h  arrstorageabc.cpp  arrstorageabc.h  baselazer.cpp  baselazer.h  borderclass.cpp  borderclass.h  complexobject.cpp  complexobject.h  diecomplex.cpp  diecomplex.h  dieobject.cpp  dieobject.h  diescoreobject.cpp  diescorescomplex.cpp  elementaryobject.cpp  elementaryobject.h  elist.cpp  engine.cpp  engine_.cpp  engine_.h  errs.h  exs.cpp  exs.h  firstfleet.cpp  firstfleet.h  fleets.cpp  (+48 more)
